k8s-lab/kube-prometheus-stack/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.dev.tylerc.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alert-manager
  namespace: monitoring
spec:
  hostnames:
    - alert-manager.dev.tylerc.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
